fixed z-index

--- a/src/components/gallery/gallery.css
+++ b/src/components/gallery/gallery.css
@@ -48,7 +48,6 @@
   align-items: center;
 
   transition: opacity 1s;
-  z-index: 10;
 }
 .image_cover span {
   color: white;
