--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -4,6 +4,7 @@
   left: 0;
   right: 0;
   height: 30vh;
+  z-index: 1;
 }
 .header_text {
   width: 100%;
